tests/typecheck/should_compile/T20588b_aux.hs
module T20588b_aux where

import {-# SOURCE #-} T20588b

