tests/typecheck/should_fail/T13068a.hs
module T13068a where
import {-# SOURCE #-} T13068
instance C Int where
